--- a/scss/_type.scss
+++ b/scss/_type.scss
@@ -659,7 +659,7 @@
                 font-size: 13px;
                 color: #ababab;
 
-                .cube2 {
+                .cube {
                     left: -20px;
                     top: 5px;
                 }
@@ -1162,37 +1162,6 @@
 
 //cube
 .cube {
-    display: block;
-    width: 12px;
-    height: 12px;
-    background: #1f1f1f;
-    border: 1px solid #ababab;
-    border-radius: 3px;
-    overflow: hidden;
-    position: absolute;
-    cursor: pointer;
-
-    &.active {
-        width: 12px;
-        height: 12px;
-        background: linear-gradient(to bottom, #3449b9 0%, #8694d8 100%);
-        background-color: #3449b9;
-        position: absolute;
-        
-        &::before {
-            content: "";
-            position: absolute;
-            top: 0px;
-            left: 3px;
-            width: 3px;
-            height: 8px;
-            border: solid 1px #fff;
-            transform: rotate(45deg);
-            border-width: 0px 2px 2px 0px;
-        }
-    }
-}
-.cube2 {
     display: block;
     width: 12px;
     height: 12px;
