--- a/scss/_table.scss
+++ b/scss/_table.scss
@@ -2664,6 +2664,10 @@
 	tr {
 		text-align: center;
 
+		&:last-child {
+			border-bottom: solid 1px #5d5d5d;
+		}
+
 		th {
 			color: #33bc19;
 			font-size: 13px;
@@ -4369,10 +4373,10 @@
 
 						&::before {
 							content: "";
-							width: 15px;
-							height: 15px;
+							width: 13px;
+							height: 13px;
 							position: absolute;
-							background: url(../images/infor.png) no-repeat;
+							background: url(../images/infor2.png) no-repeat;
 							top: -2px;
 							left: -18px;
 						}
@@ -4481,10 +4485,10 @@
 	
 						&::before {
 							content: "";
-							width: 15px;
-							height: 15px;
+							width: 13px;
+							height: 13px;
 							position: absolute;
-							background: url(../images/infor.png) no-repeat;
+							background: url(../images/infor2.png) no-repeat;
 							top: -2px;
 							left: -18px;
 						}
@@ -4530,7 +4534,7 @@
 
 				.remind {
 					float: right;
-					color: #fff;
+					color: #898989;
 					margin-right: 20px;
 					font-size: 12px;
 					position: relative;
@@ -4538,11 +4542,11 @@
 
 					&::before {
 						content: "";
-						width: 15px;
-						height: 15px;
+						width: 13px;
+						height: 13px;
 						position: absolute;
-						background: url(../images/infor.png) no-repeat;
-						top: 1px;
+						background: url(../images/infor2.png) no-repeat;
+						top: 2px;
 						left: -18px;
 					}
 				}
@@ -4557,25 +4561,24 @@
 				button {
 					width: 10%;
 					height: 90px;
-					border: solid 1px #828282;
+					border: solid 1px #858585;;
 					background: #3d3d3d;
 					border-radius: 3px;
-					color: #cacaca;
+					color: #d2d2d2;
 					margin: 0px 15px 20px;
 					position: relative;
+					overflow: hidden;
 
 					&:hover,&:active,&.active {
-						border-color: #ababab;
-						background: #fff;
-						color: #505050;
-						border-radius: 3px 3px 10px 3px;
+						border-color: #47a215;
+						background: linear-gradient(to top,#242424 0%,#1b1b1b 100%);
 						
 						&::before {
 							content: "";
 							position: absolute;
-							width: 29px;
+							width: 30px;
 							height: 29px;
-							background: url(../images/box_check.png);
+							background: url(../images/box_check2.png);
 							right: -1px;
 							bottom: -1px;
 						}
@@ -4654,14 +4657,40 @@
 				text-align: left;
 				padding: 20px;
 
-				select {
-					width: 240px;
-					height: 40px;
-					background: #3d3d3d;
-					border: solid 1px #828282;
-					border-radius: 3px;
-					color: #cacaca;
-					padding-left: 10px;
+				label {
+					display: inline-block;
+					width: auto;
+					height: auto;
+					position: relative;
+
+					&::before {
+						content: "";
+						position: absolute;
+						top: 50%;
+						right: 10px;
+						transform: translateY(-50%);
+						width: 0px;
+						height: 0px;
+						border-style: solid;
+						border-width: 7px 6px 0px 6px;
+						border-color: #d2d2d2 transparent;
+					}
+
+					select {
+						width: 240px;
+						height: 40px;
+						background: linear-gradient(to top,#373737 0%,#3d3d3d 100%);
+						border: solid 1px #858585;
+						border-radius: 3px;
+						color: #d2d2d2;
+						padding-left: 10px;
+						appearance: none;
+						box-shadow: 0px 2px 5px 0px #1c1c1c;
+
+						option {
+							background: #373737;
+						}
+					}
 				}
 			}
 		}
@@ -4678,7 +4707,6 @@
 				.line {
 					width: 1px;
 					height: 120px;
-					background: #ababab;
 					position: absolute;
 					left: 50%;
 					top: 50%;
@@ -4708,24 +4736,66 @@
 							padding-right: 15px;
 						}
 
-						select,input {
+						label {
+							display: inline-block;
+							width: auto;
+							height: auto;
+							position: relative;
+
+							&::before {
+								content: "";
+								position: absolute;
+								top: 50%;
+								right: 10px;
+								transform: translateY(-50%);
+								width: 0px;
+								height: 0px;
+								border-style: solid;
+								border-width: 7px 6px 0px 6px;
+								border-color: #d2d2d2 transparent;
+							}
+
+							select {
+								width: 220px;
+								height: 40px;
+								padding-left: 10px;
+								background: linear-gradient(to top,#373737 0%,#3d3d3d 100%);
+								border: solid 1px #858585;
+								color: #d2d2d2;
+								border-radius: 3px;
+								appearance: none;
+								box-shadow: 0px 2px 5px 0px #1c1c1c;
+
+								option {
+									background: #373737;
+								}
+							}
+						}
+
+						input {
 							width: 220px;
 							height: 40px;
 							padding-left: 10px;
-							border: solid 1px #828282;
-							background: #3d3d3d;
-							color: #cacaca;
+							border: solid 1px #858585;
+							background: linear-gradient(to top,#333333 0%,#272727 100%);
+							color: #d2d2d2;
 							border-radius: 3px;
 							box-sizing: border-box;
+							box-shadow: 0px 2px 5px 0px #1c1c1c;
 						}
 
 						button {
-							color: #cacaca;
+							color: #dddddd;
 							padding: 5px 8px;
-							border: solid 1px #ababab;
+							border: solid 1px #707070;
 							border-radius: 3px;
-							background: transparent;
+							background: #252525;
 							margin-left: 20px;
+
+							&:hover,&:active,&.active {
+								color: #30b017;
+								border-color: #299913;
+							}
 						}
 					}
 				}
@@ -4743,10 +4813,10 @@
 				button {
 					width: 150px;
 					height: auto;
-					border: solid 1px #828282;
-					background: #3d3d3d;
+					border: solid 1px #8c8c8c;
+					background: linear-gradient(to top,#373737 0%,#3d3d3d 100%);
 					border-radius: 3px;
-					color: #cacaca;
+					color: #c9c9c9 ;
 					line-height: 35px;
 					font-size: 18px;
 					margin-right: 15px;
@@ -4756,8 +4826,9 @@
 					}
 
 					&:hover,&:active,&.active {
-						background: #fff;
-						color: #505050;
+						background: #202020;
+						color: #2ea31b;
+						border-color: #247f16;
 
 						span {
 							background-position-y: 100%;
@@ -4767,8 +4838,8 @@
 					span {
 						display: inline-block;
 						width: 25px;
-						height: 25px;
-						background: url('../images/change.png') no-repeat;
+						height: 22px;
+						background: url('../images/change2.png') no-repeat;
 						margin: 0px 10px -5px 0px;
 					}
 				}
@@ -4795,10 +4866,10 @@
 				.moneybut {
 					width: 150px;
 					height: auto;
-					border: solid 1px #828282;
-					background: #3d3d3d;
+					border: solid 1px #8c8c8c;
+					background: linear-gradient(to top,#373737 0%,#3d3d3d 100%);
 					border-radius: 3px;
-					color: #cacaca;
+					color: #cccccc;
 					line-height: 35px;
 					font-size: 18px;
 					margin-right: 15px;
@@ -4808,8 +4879,9 @@
 					}
 
 					&:hover,&:active,&.active {
-						background: #fff;
-						color: #505050;
+						border-color: #247f16;
+						background: #202020;
+						color: #2ea31b;
 					}
 				}
 
@@ -4821,12 +4893,12 @@
 					input {
 						width: 240px;
 						height: 40px;
-						border: solid 1px #828282;
-						background: #3d3d3d;
+						border: solid 1px #858585;
+						background: linear-gradient(to top,#333333 0%,#272727 100%);
 						border-radius: 3px;
 						box-sizing: border-box;
 						padding-left: 10px;
-						color: #cacaca;
+						color: #8d8d8d;
 						font-size: 14px;
 					}
 
@@ -4839,11 +4911,11 @@
 
 						&::before {
 							content: "";
-							width: 15px;
-							height: 15px;
+							width: 13px;
+							height: 13px;
 							position: absolute;
-							background: url(../images/infor.png) no-repeat;
-							top: -2px;
+							background: url(../images/infor2.png) no-repeat;
+							top: 0px;
 							left: -18px;
 						}
 					}
@@ -4853,14 +4925,16 @@
 					display: block;
 					width: 240px;
 					height: 40px;
-					background: linear-gradient(to bottom, #8f9cdc 0%, #3247b8 100%);
+					background: linear-gradient(to right,#a1ea22 0%,#34da14 100%);
 					border-radius: 3px;
 					font-size: 16px;
-					color: #fff;
+					color: #232323;
 					margin: 0px 0px 20px;
 
 					&:hover,&:active,&.active {
-						background: linear-gradient(to bottom, #3247b8 0%, #8e9bdc 100%);
+						background: linear-gradient(to top, #2d2d2d 0%, #1a1a1a 99%);
+						border: solid 1px #2b7d16;
+						color: #46d317;
 					}
 				}
 			}
